--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,33 @@
+# GraphicShop Environment Variables - EXAMPLE FILE
+# Copy this file to .env and fill in your own values
+
+# Server Configuration
 PORT=3000
 NODE_ENV=development
 
-# Database
+# Database Configuration
 DB_HOST=localhost
+DB_PORT=3306
 DB_NAME=graphic_shop
 DB_USER=root
-DB_PASSWORD=your_password
+DB_PASSWORD=
+DB_DIALECT=sqlite
 
-# Authentication
-JWT_SECRET=your_jwt_secret
+# JWT Authentication
+JWT_SECRET=your_jwt_secret_key_here
 JWT_EXPIRES_IN=7d
 
-# Stripe
-STRIPE_PUBLIC_KEY=your_stripe_public_key
-STRIPE_SECRET_KEY=your_stripe_secret_key
+# Stripe Payment
+STRIPE_PUBLIC_KEY=pk_test_your_stripe_public_key
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
-# Email
+# Email Configuration
 EMAIL_HOST=smtp.example.com
 EMAIL_PORT=587
 EMAIL_USER=your_email@example.com
 EMAIL_PASS=your_email_password
+EMAIL_FROM=GraphicShop <noreply@graphicshop.com>
 
-# App URL
+# Application URLs
 BASE_URL=http://localhost:3000
