Fix: Remove API keys and add gitignore patterns

--- a/.env
+++ b/.env
@@ -10,16 +10,16 @@ DB_PORT=3306
 DB_NAME=graphic_shop
 DB_USER=root
 DB_PASSWORD=
-DB_DIALECT=mysql  # Make sure this is a string value like 'mysql', 'postgres', etc.
+DB_DIALECT=sqlite
 
 # JWT Authentication
 JWT_SECRET=your_jwt_secret_key_here
 JWT_EXPIRES_IN=7d
 
 # Stripe Payment
-STRIPE_PUBLIC_KEY=pk_test_TYooMQauvdEDq54NiTphI7jx
-STRIPE_SECRET_KEY=sk_test_4eC39HqLyjWDarjtT1zdp7dc
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+STRIPE_PUBLIC_KEY=pk_test_example_not_real_key
+STRIPE_SECRET_KEY=sk_test_example_not_real_key
+STRIPE_WEBHOOK_SECRET=whsec_example_not_real_key
 
 # Email Configuration
 EMAIL_HOST=smtp.example.com
