--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "homepage": "https://YOUR_USERNAME.github.io/graphic-shop",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
