--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "deploy-custom": "node deploy.js"
   },
   "homepage": "https://YOUR_USERNAME.github.io/graphic-shop",
   "dependencies": {
@@ -27,6 +31,8 @@
     "stripe": "^13.3.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "gh-pages": "^6.3.0",
+    "nodemon": "^3.0.1",
+    "vite": "^6.2.6"
   }
 }
